# SDL2_Playground

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.pc  Dockerfile.pc-win  Dockerfile.wiiu  Makefile.pc-win  Makefile.wiiu  README.md  filelist.sh
.github/workflows/: building.yml  linux-x86-64.yml  pc-win.yml
src/: CVideo.cpp  CVideo.h  MainWindow.cpp  MainWindow.h  logger.h  main.cpp
src/fs/: CFile.cpp  CFile.hpp  FSUtils.cpp  FSUtils.h
src/gui/: GuiButton.cpp  GuiButton.h  GuiController.h  GuiElement.cpp  GuiElement.h  GuiFrame.cpp  GuiFrame.h  GuiImage.cpp  GuiImage.h  GuiSound.cpp  GuiSound.h  GuiText.cpp  GuiText.h  GuiTexture.cpp  GuiTexture.h  GuiTextureData.cpp  GuiTextureData.h  GuiTrigger.cpp  GuiTrigger.h  SDLController.h  SDLControllerJoystick.h  SDLControllerMouse.h  SDLControllerWiiUGamepad.h  SDLControllerWiiUProContoller.h  SDLControllerXboxOne.h  SDL_FontCache.c  SDL_FontCache.h  sigslot.h
src/input/: ControllerManager.cpp  ControllerManager.h  SDLController.h  SDLControllerJoystick.h  SDLControllerMouse.h  SDLControllerWiiUGamepad.h  SDLControllerWiiUProContoller.h  SDLControllerXboxOne.h
src/menu/: MainWindow.cpp  MainWindow.h  MainWindowDRC.cpp  MainWindowDRC.h  MainWindowTV.cpp  MainWindowTV.h
src/resources/: Resources.cpp  Resources.h  filelist.h
src/system/: SDLSystem.cpp  SDLSystem.h
src/system/video/: Renderer.h  SDL_FontCache.cpp  SDL_FontCache.h
src/utils/: logger.h
